fix spacing in [slug].js

--- a/styles/Shoe.module.scss
+++ b/styles/Shoe.module.scss
@@ -11,7 +11,7 @@
 }
 
 .hero {
-    width: 100%;
+    width: 80%;
 }
 
 .subtitle {
@@ -23,5 +23,8 @@
 .description {
     font-size: 20px;
     line-height: 1.5;
-    padding: 16px;
+    letter-spacing: 0.8px;
+    padding: 32px;
+    white-space: pre-wrap;
+    text-align: left;
 }
