--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -18,7 +18,8 @@ a {
 
 header {
     width: 100%;
-	height: 100px;
+    height: 100px;
+    font-size: 30px;
 	border-bottom: 1px solid #eaeaea;
 	display: flex;
 	justify-content: center;
